Add javaxdelta library, reformatted and tweaked to use the latest GNU Trove.
Add a diff calculator tool and implement download+application of diffs.

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -45,5 +45,10 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.6</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.trove4j</groupId>
+            <artifactId>trove4j</artifactId>
+            <version>3.0.3</version>
+        </dependency>
     </dependencies>
 </project>
