--- a/app/pom.xml
+++ b/app/pom.xml
@@ -16,6 +16,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
+                <version>2.3</version>
                 <configuration>
                     <!-- Remove dead classes -->
                     <minimizeJar>true</minimizeJar>
