--- a/app/pom.xml
+++ b/app/pom.xml
@@ -64,9 +64,9 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.google</groupId>
-            <artifactId>bitcoinj</artifactId>
-            <version>0.12-SNAPSHOT</version>
+            <groupId>org.bitcoinj</groupId>
+            <artifactId>bitcoinj-core</artifactId>
+            <version>0.12</version>
         </dependency>
         <dependency>
             <groupId>net.sf.jopt-simple</groupId>
