--- a/app/pom.xml
+++ b/app/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>updatefx-parent</artifactId>
         <groupId>com.vinumeris</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -87,7 +87,7 @@
         <dependency>
             <groupId>com.vinumeris</groupId>
             <artifactId>updatefx</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
         <dependency>
             <groupId>org.bitcoinj</groupId>
