--- a/app/pom.xml
+++ b/app/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>updatefx-parent</artifactId>
         <groupId>com.vinumeris</groupId>
-        <version>1.2</version>
+        <version>1.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -85,7 +85,7 @@
         <dependency>
             <groupId>com.vinumeris</groupId>
             <artifactId>updatefx</artifactId>
-            <version>1.2</version>
+            <version>1.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.bitcoinj</groupId>
