--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -62,5 +62,10 @@
             <artifactId>updatefx</artifactId>
             <version>1.5-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.7.10</version>
+        </dependency>
     </dependencies>
 </project>
